@@ -18,75 +18,14 @@ android {
     }
 }
 
-apply plugin: 'android-unit-test'
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services-wearable:+'
-    compile 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.8.3'
-    testCompile 'junit:junit:4.10'
-    testCompile 'org.robolectric:robolectric:2.4'
+    compile 'org.glassfish.tyrus.bundles:tyrus-standalone-client:+'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.robolectric:robolectric:3.0-rc2'
+    testCompile 'org.robolectric:shadows-support-v4:3.0-rc2'
     testCompile 'org.mockito:mockito-core:2.0.3-beta'
-
-//    repositories {
-//        mavenCentral()
-//    }
-//    // Espresso
-//    androidTestCompile files('lib/espresso-1.1.jar', 'lib/testrunner-1.1.jar', 'lib/testrunner-runtime-1.1.jar')
-//    androidTestCompile 'com.google.guava:guava:14.0.1'
-//    androidTestCompile 'com.squareup.dagger:dagger:1.1.0'
-//    androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
-//    androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
-//    androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
-//    androidTestCompile "org.mockito:mockito-core:1.+"
-//
-//    androidTestCompile('junit:junit:4.11') {
-//        exclude module: 'hamcrest-core'
-//    }
-//    androidTestCompile('org.robolectric:robolectric:2.4') {
-//        exclude module: 'classworlds'
-//        exclude module: 'commons-logging'
-//        exclude module: 'httpclient'
-//        exclude module: 'maven-artifact'
-//        exclude module: 'maven-artifact-manager'
-//        exclude module: 'maven-error-diagnostics'
-//        exclude module: 'maven-model'
-//        exclude module: 'maven-project'
-//        exclude module: 'maven-settings'
-//        exclude module: 'plexus-container-default'
-//        exclude module: 'plexus-interpolation'
-//        exclude module: 'plexus-utils'
-//        exclude module: 'wagon-file'
-//        exclude module: 'wagon-http-lightweight'
-//        exclude module: 'wagon-provider-api'
-//    }
-//    androidTestCompile 'com.squareup:fest-android:1.0.+'
+    testCompile 'org.apache.maven:maven-ant-tasks:2.1.3'  // fixes NoClassDefFoundErrors (robolectric issue #1641)
 }
-
-//robolectric {
-//    // configure the set of classes for JUnit tests
-//    include '**/*Test.class'
-//    exclude '**/espresso/**/*.class'
-//
-//    // configure max heap size of the test JVM
-//    maxHeapSize = '2048m'
-//
-//    // configure the test JVM arguments
-//    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
-//
-//    // Specify max number of processes (default is 1)
-//    maxParallelForks = 4
-//
-//    // Specify max number of test classes to execute in a test process
-//    // before restarting the process (default is unlimited)
-//    forkEvery = 150
-//
-//    // configure whether failing tests should fail the build
-//    ignoreFailures true
-//
-//    // use afterTest to listen to the test execution results
-//    afterTest { descriptor, result ->
-//        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
-//    }
-//}
